# adaptive-huffman-coding

./: .gitignore  .gitlab-ci.yml  Baboon.raw  Lena.raw  README.md  main.py  main.py.lprof  pyproject.toml  requirements.txt
.github/workflows/: build.yml
adaptive_huffman/: __init__.py  ada_huffman.py  tree.py  utils.py
adaptive_huffman_coding/: __init__.py  tree.py  utils.py
tests/: test_adaptive_huffman_coding.py  test_integration.py
tests/images/: simple.raw
