[tool.poetry]
name = "adaptive-huffman-coding"
version = "0.1.0"
description = ""
authors = ["Sean Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitarray = "^1.6.0"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pylint = "^2.6.0"
mypy = "^0.790"
autopep8 = "^1.5.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
